# zhixunjingling

./: README.md  README_cn.md
源码/其他调试/airfoil_report/: generate_report.py  process_airfoil.py
源码/其他调试/face_svm_homework/: README.md  face_svm.py  requirements.txt
源码/其他调试/scripts/: fix_mcu_gb2312.py  repair_car_h.py
源码/导航2/: README.md
源码/导航2/config/: device_ports.yaml  mission_waypoints.yaml  mission_waypoints_v5.yaml
源码/导航2/docs/: 00_整体方案与思路.md  01_下位机串口协议.md
源码/导航2/ros2_ws/src/car_bringup/: CMakeLists.txt  package.xml
源码/导航2/ros2_ws/src/car_bringup/config/: device_ports.yaml
源码/导航2/ros2_ws/src/car_bringup/launch/: mapping.launch.py  navigation.launch.py  urdf_loader.py
源码/导航2/scripts/: analyze_box_edge_samples.py  arm_pose_cmd.py  box_edge_calibrate.py  check_usb_ports.sh  grab_mission.py  identify_ports.sh  imu_wz_step_test.py  load_ports.py  load_ports.sh  localization_drift_probe.py  mapping_teleop.py  nav_arm_look_test.py  nav_diagnose.sh  nav_yaw_probe.py  odom_groundtruth_calibration.py  odom_laser_consistency_test.py  run_full_mission.py  run_full_mission.sh  run_mapping.sh  run_mission.py  run_mission_phase1.sh  run_navigation.sh  save_mission_points.py  scp_to_rdk.txt  segment_stop_drift_test.py  sensor_health_check.py  serial_teleop_probe.py  show_ports.sh  stationary_odom_imu_drift_test.py  sync_to_rdk.ps1  sync_yaw_probe.ps1  velocity_pid_step_test.py  waypoint_recorder.py
源码/小车下位机/HARDWARE/: Car.c  Car.h  Distance.h  IMU.c  IMU.h  Motor.c  Motor.h  PID.c  PID.h  USART.c  USART.h  hu_m40.c  hu_m40.h  nrf24l01.c  nrf24l01.h  timer.c  timer.h
源码/小车下位机/SYSTEM/: Untitled
源码/小车下位机/USER/: TIMER.map  TIMER.uvguix.lzy  TIMER.uvguix.惠普  TIMER.uvoptx  TIMER.uvprojx  main.c  startup_stm32f10x_hd.lst
源码/无人机上位机/drone_communication/: package.xml  setup.py
源码/无人机上位机/drone_controller/: package.xml  setup.py
源码/无人机上位机/drone_interfaces/: CMakeLists.txt  package.xml
源码/无人机上位机/drone_mavros/: package.xml  setup.cfg  setup.py
源码/无人机上位机/drone_qr/: package.xml  (+2 more)
源码/机械臂/ros2_rdk_port/wheeltec_arm_bridge/: package.xml  setup.cfg  setup.py
源码/机械臂/ros2_rdk_port/wheeltec_arm_bridge/launch/: arm_hardware.launch.py  arm_serial_only.launch.py
源码/机械臂/ros2_rdk_port/wheeltec_arm_bridge/wheeltec_arm_bridge/: arm_serial_node.py  trajectory_bridge_node.py
源码/机械臂/ros2_rdk_port/wheeltec_color_sort/: package.xml  setup.cfg  setup.py
源码/机械臂/ros2_rdk_port/wheeltec_color_sort/config/: pick_color.yaml
源码/机械臂/ros2_rdk_port/wheeltec_color_sort/launch/: pick_color.launch.py  view_color.launch.py
源码/机械臂/ros2_rdk_port/wheeltec_color_sort/wheeltec_color_sort/: color_pick_node.py  find_color_node.py
(+70 files in other folders)
