<?xml version="1.0"?>
<package format="3">
  <name>wheeltec_color_sort</name>
  <version>0.2.0</version>
  <description>Single-color pick for WHEELTEC A150</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>a150_arm_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
