<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for mapping and navigation.</description>
  <maintainer email="zty226688@qq.com">zty226688</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>base_driver</depend>
  <depend>car_description</depend>
  <depend>car_navigation</depend>
  <depend>slam_toolbox</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>navigation2</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>lslidar_driver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

